tests/vertical-slice/reject/receive_gen_fn_owned_state_capture.hew
// Reject fixture: an actor state field of an owned (non-BitCopy) type read
// inside a `receive gen fn` body must fail closed with the SAME generator
// capture-admissibility gate a standalone `gen fn` uses (`string`/`Vec`/etc.
// state cannot be flat-copied into the generator's env without aliasing the
// actor's heap). This must be the precise capture-admissibility diagnostic,
// not the unknown-actor-handler NYI the dispatch bridge would otherwise mask
// it behind.
//
// The owned state field is constructed via a supervised child's init-closure
// (the proven working path for owned actor state — see
// supervisor_owned_child_init_restart.hew); plain `spawn` construction of an
// owned-field actor state is an unrelated, pre-existing gap this fixture does
// not exercise.
record Config { label: string }

actor Reader {
    var name: string;
    receive gen fn stream() -> i64 {
        yield name.len();
    }
}

supervisor App(config: Config) {
    strategy: one_for_one;
    intensity: 3 within 60s;

    child r: Reader(name: config.label);
}

fn main() {
    let cfg = Config { label: "hello" };
    let sup = spawn App(config: cfg);
    let r = sup.r;
    for await v in r.stream() {
        println(f"{v}");
    }
}
